[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codemeta2mp"
description = "Converts codemeta to a representation for the SSHOC Open Marketplace"
version = "0.1"
dependencies = [
    "codemetapy", "requests"
]
authors = [
    {name = "Maarten van Gompel", email = "proycon@anaproy.nl"}
]
maintainers = [
    {name = "Maarten van Gompel", email = "proycon@anaproy.nl"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
requires-python = ">= 3.7"

[project.urls]
Repository = "https://github.com/proycon/codemeta2mp.git"

[project.scripts]
codemeta2mp = "codemeta2mp:main"
